# pdca

./: .eslintrc.json  .gitignore  .npmignore  AUTHORS  CLAUDE.md  GPT對於PDCA套件的研究.md  INSTALLATION.md  LICENSE  MANIFEST.in  README.md  TESTING_REPORT.md  commit_changes.sh  install.sh  package-lock.json  package.json  pdca  pdca-init  pdca-recorder  pdca_mini.py  pdca_prompt.py  pyproject.toml  self_assessment.py  setup.py  test_cli_direct.py  test_hooks.sh  test_p_mode.md  test_package.py  test_pip_install.sh  test_symlink_prevention.sh  tsconfig.json
.claude/: settings.json  settings.local.json
.claude/commands/: pdca.json  pdca.md  pdca.yaml
.claude/hooks/: pdca_integration.md
.pdca/: README.md  config-template.json  config.json  current-task.txt  current_task.json  execution-log.txt  status.json  test-risk-assessment.md  test-standard-permissions.json
.pdca-shokunin/: config.template.json  current_task.json  launcher.py  monitor.py
.pdca/agents/: base_agent.py
.pdca/coordinator/: master.py  protocols.py
agents/profiles/: agile.yaml  balanced-execution.yaml  custom-example.yaml  economic.yaml  enterprise.yaml  premium.yaml  research.yaml  shokunin-optimized.yaml  shokunin.yaml  (+2 more)
docs/: AGENT_CONFIGURATION_DESIGN.md  STYLES.md  hooks_development.md
examples/: multi-agent-demo.md
memories/: project.md
pdca_shokunin/: README_LEGACY.md  cli.py
pdca_shokunin.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
scripts/: postinstall.js  setup-commands.js  setup.js
src/: index.ts
tests/: test-system.js  test-tmux.js
(+49 files in other folders)
