[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdca-shokunin"
version = "2.0.0"
description = "真實多代理 PDCA 協調系統 - 輕量級職人精神版"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Raiy Yang", email = "raiy@example.com"},
]
keywords = ["pdca", "multi-agent", "ai", "coordination", "claude"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "anthropic>=0.20.0",
    "asyncio-throttle>=1.0.2",
]

[project.optional-dependencies]
dev = ["pytest", "black", "flake8"]

[project.scripts]
pdca = "pdca_shokunin.cli:main"
pdca-recorder = "pdca_shokunin.cli:recorder_main"

[project.urls]
Homepage = "https://github.com/raiyyang/pdca-shokunin"
Repository = "https://github.com/raiyyang/pdca-shokunin.git"
Issues = "https://github.com/raiyyang/pdca-shokunin/issues"